# ml-diffucoder

./: .gitignore  2025_07_13_tinydiffusion_cleaned_up_notebook.py  BENCHMARK_SUMMARY.md  CLAUDE.md  COMMIT_MESSAGE.md  JAX_EXPERIMENT_PLAN.md  README.md  SMOKE_TESTS.md  benchmark_optimizations_colab.ipynb  check_hf_repo.py  check_params_simple.py  convert_dream_weights.py  convert_jax_to_sharded.py  demo_outputs.py  download_and_test.py  download_complete_model.py  download_full_model.sh  download_small_model.py  hellometal.py  inspect_jax_params.py  pytorch_vs_jax_benchmark.py  quick_jax_test.py  quick_sanity_test.py  run_benchmark_standalone.py  run_complete_benchmark.py  run_jax_benchmark_with_progress.py  run_pytorch_metal_test.py  run_real_benchmark.py  run_real_pytorch_vs_jax_benchmark.py  run_simple_jax_test.py  run_test_benchmark.py  sanity_test_real_weights.py  setup_and_benchmark.sh  simple_inference_demo.py  simple_jax_benchmark.py  test_dream_loading.py  test_first_layer_parity.py  test_jax_metal.py  test_local_install.py  test_local_model_cpu.py  (+7 more)
benchmarks/: pytorch_cpu_benchmark.py
examples/: tpu_inference_simple.py
jax_diffucoder_pkg/: pyproject.toml
jax_diffucoder_pkg/jax_lm/: .pre-commit-config.yaml  __init__.py  cli.py  generate_diffusion.py  pyproject.toml
jax_diffucoder_pkg/jax_lm/.github/workflows/: test.yml
jax_diffucoder_pkg/jax_lm/training/: __init__.py  config.py
jax_diffucoder_pkg/jax_lm/utils/: __init__.py  tpu_utils.py
jax_lm/: .pypirc.template  BENCHMARKS.md  CLAUDE.md  COLAB_GITHUB_AUTH.md  COLAB_TEST.md  DEVELOPMENT.md  GPU_SETUP.md  Makefile  PYPI_TESTING_OPTIONS.md  README.md  README_INFERENCE.md  README_PYPI.md  README_UPDATED.md  TESTPYPI_QUICKSTART.md  TESTPYPI_UPLOAD.sh  TOKENIZER.md  __init__.py  colab_testpypi_test.ipynb  generate_diffusion.py  inference.py  inference_tpu.py  pyproject.toml  setup.cfg  setup.py  test_colab_notebook.py  test_hf_loading.py  upload_to_testpypi.py  uv.toml
jax_lm/benchmarks/: compare_results.py  cpu_benchmark.py  download_and_benchmark.sh  hardware_benchmark.py  mock_benchmark.py  quick_demo.py
jax_lm/docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  GRPO_TRAINING.md  TRAINING.md
jax_lm/examples/: README.md  basic_generation.py  batch_generation.py  grpo_inference.py  grpo_training.py  streaming_generation.py  test_huggingface_loading.py
jax_lm/jax_lm/: __init__.py
jax_lm/models/: __init__.py  components.py  diffucoder.py  dream.py
jax_lm/scripts/: convert_pytorch_to_jax.py  convert_to_sharded.py  download_weights.py  upload_to_huggingface_orbax.py
jax_lm/tests/: quick_inference_test.py  smoke_tests.py  test_inference.py  test_layer_parity.py  test_model_loading.py  test_numerical_parity.py
jax_lm/training/: coupled_grpo.py  trainer.py
jax_lm/utils/: __init__.py  hf_integration.py  tokenizer.py  (+3 more)
jax_lm_package/: jax_lm
